# ruby-for-android

./: .gitignore  ARCHITECTURE.md  CLAUDE.MD  CLAUDE.md  CMakeLists.txt  README.md  REFACTORING.md  TEST_CHECKLIST.md  arm64-ios-device-toolchain.params  arm64-ios-simulator-toolchain.params  arm64-macos-toolchain.params  configure  docker-compose.yml  x86_64-android-toolchain.params  x86_64-linux-toolchain.params
.claude/: settings.local.json
.github/workflows/: build.yml
cmake/: Dependencies.cmake  PlatformDetection.cmake  README.md  RubyBuildHelpers.cmake
cmake/core/: BuildHelpers.cmake  CombineFatLibrary.cmake  CombineFatLibraryScript.cmake  CopyIfExists.cmake  Main.cmake  PlatformDetection.cmake  Validation.cmake
cmake/core/scripts/: strip_legacy_darwin_flags.cmake
cmake/dependencies/: gdbm.cmake  ncurses.cmake  openssl.cmake  readline.cmake  ruby.cmake
cmake/patches/gdbm/android/: series
cmake/patches/openssl/android/: series
cmake/patches/readline/android/: series
cmake/patches/ruby/android/: remove-version-from-soname.patch
cmake/ruby-app/: Application.cmake
cmake/ruby-app/dependencies/: gdbm.cmake  gmp.cmake  libbsd.cmake  libffi.cmake  libmd.cmake  libxcrypt.cmake  ncurses.cmake  openssl.cmake  physfs.cmake  readline.cmake  ruby-physfs.cmake  ruby.cmake  zlib.cmake
cmake/ruby-app/dependencies/scripts/: README.md  build_physfs.cmake  build_ruby_physfs.cmake
cmake/ruby-app/dependencies/scripts/ruby-physfs/: CMakeLists.txt
cmake/ruby-app/patches/gdbm/android/: soname-without-versioning.patch
cmake/ruby-app/patches/gdbm/linux/: gdbm-fix-link-failure-against-gcc-10.patch  series
cmake/ruby-app/patches/libbsd/linux/: 01-disable-version-script.patch  02-disable-source-symver.patch  series
cmake/ruby-app/patches/libmd/linux/: 01-disable-version-script.patch  02-disable-source-symver.patch
cmake/ruby-app/patches/ncurses/android/: series  soname-without-version.patch
cmake/ruby-app/patches/openssl/android/: soname-without-version.patch
cmake/ruby-app/patches/ruby/android/: series
cmake/ruby-app/patches/ruby/ios/: fix-getentropy-ios.patch  fix-readline-extconf-ios.patch  fix-sys-vnode-ios.patch  series
cmake/ruby-app/scripts/: combine_ruby_extensions.cmake  create_ruby_archive.cmake  install_debug_gem_lib.cmake  integrate_debug_gem.cmake  link_test.cmake  verify_ruby_extensions.sh
cmake/ruby-app/tests/: link_test.c
docker/: Dockerfile
ruby-build/: CMakeLists.txt
ruby-build/ncurses/: cmake.conf
ruby-build/openssl/: cmake.conf
ruby-build/readline/: cmake.conf
ruby-build/readline/patches/: soname-without-version.patch
ruby-build/ruby/: cmake.conf
ruby-build/ruby/patches/: remove-version-from-soname.patch
scripts/: build.sh  clean.sh  configure.sh  docker-dev-action.sh
scripts/tools/: clean-all-libs.sh  constants.sh  docker-dev-action.sh
tools/: env.src.template
utilities/: constants.sh  run_ruby.sh  setup_ruby.sh  verify_pic.sh
